--- a/views/db/dbUsers.html
+++ b/views/db/dbUsers.html
@@ -1,3 +1,4 @@
+{{define "db/users"}}
 {{template "Tpl/header" .}}
 {{template "Tpl/headerSecond" .}}
 {{template "Tpl/sidebar" .}}
@@ -29,12 +30,12 @@
                   </tr>
               </thead>
               <tbody>
-                  
+
               </tbody>
           </table>
         </div>
        <div id="add-user" style="display:none">
-         
+
        </div>
      </div>
     </div>
@@ -47,3 +48,4 @@
 <script src="/js/db/dbUsers.js"></script>
 </body>
 </html>
+{{end}}
