--- a/views/db/home.html
+++ b/views/db/home.html
@@ -1,3 +1,4 @@
+{{define "db/home"}}
 {{template "Tpl/header" .}}
 {{template "Tpl/headerSecond" .}}
 {{template "Tpl/sidebar" .}}
@@ -57,3 +58,4 @@
 
 </body>
 </html>
+{{end}}
