--- a/views/db/newCollection.html
+++ b/views/db/newCollection.html
@@ -1,3 +1,4 @@
+{{define "db/newCollection"}}
 {{template "Tpl/header" .}}
 {{template "Tpl/headerSecond" .}}
 {{template "Tpl/sidebar" .}}
@@ -32,7 +33,7 @@
                     <label for="doc-ipt-3" class="am-u-sm-2 am-form-label">Is Capped</label>
                     <div class="am-u-sm-8 am-u-end am-checkbox me-cap-cal-op-checkbox" >
                         <label>
-                              <input type="checkbox"> 
+                              <input type="checkbox">
                         </label>
                     </div>
                </div>
@@ -55,7 +56,7 @@
                   </div>
                </div>
             </div>
-            
+
         </form>
         <br>
         </div>
@@ -69,3 +70,4 @@
 
 </body>
 </html>
+{{end}}
