--- a/views/login/login.html
+++ b/views/login/login.html
@@ -1,3 +1,4 @@
+{{define "login/login"}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +9,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="renderer" content="webkit">
 	<meta http-equiv="Cache-Control" content="no-siteapp" />
-	<link rel="stylesheet" href="/css/amazeui.min.css"/>
+	<link rel="stylesheet" href="/public/css/amazeui.min.css"/>
 	<style>
 	  .header {
 	    text-align: center;
@@ -36,7 +37,7 @@
 	    <strong>
 	    	<p>Welcome to use TinMongo<br/>欢迎使用TinMongo</p>
 	    </strong>
-	    
+
 	  </div>
 	  <hr />
 	</div>
@@ -45,10 +46,10 @@
 	  <div class="am-u-lg-6 am-u-md-8 am-u-sm-centered">
 	    <form method="post" class="am-form">
 		<div class="loginFont">
-		     <strong> 
+		     <strong>
 			<span>Login:</span>
 		     </strong>
-		</div>	     
+		</div>
 		<br>
 	      <label for="UserName">UserName:</label>
 	      <input type="text" name="" id="UserName" value="">
@@ -56,11 +57,11 @@
 	      <input type="password" name="" id="password" value="">
 		<br>
 		<div class="notAdmin">
-		     <strong> 
+		     <strong>
 			<span>Non-Admin users:</span>
 		     </strong>
-		</div>	   
-		<br>  
+		</div>
+		<br>
 	     	<label for="DBName">DB Name(s)</label>
 	     	<input type="text" id="DBName" value="">
 	      <br />
@@ -74,3 +75,4 @@
 	</div>
 </body>
 </html>
+{{end}}
