--- a/views/server/command.html
+++ b/views/server/command.html
@@ -1,11 +1,12 @@
+{{define "server/command"}}
 {{template "Tpl/header" .}}
 {{template "Tpl/headerSecond" .}}
 {{template "Tpl/sidebar" .}}
 {{set . "active" "command"}}
   <div class="admin-content">
   {{template "Tpl/navigation" .}}
-      
-        
+
+
       <div class="am-g am-g-fixed am-margin-top">
           <div >
               <a href=""><i class="am-icon-angle-double-right"></i>&nbsp;&nbsp; List of database commands</a>
@@ -33,11 +34,11 @@
                       <span class="am-form-caret"></span>
                     </div>
                     <div class="am-form-group">
-                        <button type="button" class="am-btn am-btn-default am-btn-block">执行代码</button>     
+                        <button type="button" class="am-btn am-btn-default am-btn-block">执行代码</button>
                     </div>
                 </fieldset>
           </form>
-          
+
         </div>
     </div>
 </div>
@@ -45,3 +46,4 @@
 
   </body>
   </html>
+{{end}}
