--- a/views/server/execute.html
+++ b/views/server/execute.html
@@ -1,11 +1,12 @@
+{{define "server/execute"}}
 {{template "Tpl/header" .}}
 {{template "Tpl/headerSecond" .}}
 {{template "Tpl/sidebar" .}}
 {{set . "active" "execute"}}
   <div class="admin-content">
   {{template "Tpl/navigation" .}}
-      
-        
+
+
       <div class="am-g am-g-fixed am-margin-top">
           <div >
               <a href=""><i class="am-icon-angle-double-right"></i>&nbsp;&nbsp; Javascript API   </a>
@@ -30,13 +31,13 @@
                       <button type="button" class="am-btn am-btn-default" id="argumentAdd"><i class="am-icon-plus"></i>Add</button>
                       <span class="am-form-caret"></span>
                     </div>
-                    
+
                     <div class="am-form-group">
-                        <button type="button" class="am-btn am-btn-default am-btn-block">执行代码</button>     
+                        <button type="button" class="am-btn am-btn-default am-btn-block">执行代码</button>
                     </div>
                 </fieldset>
           </form>
-          
+
         </div>
     </div>
 </div>
@@ -69,7 +70,7 @@
 
 function removeArgument(link) {
   $(link).parent().remove();
-  
+
   //re-order
   var divs = $("#arguments").children("div");
   for (var i=0; i<divs.length; i++) {
@@ -80,3 +81,4 @@ function removeArgument(link) {
 </script>
   </body>
   </html>
+{{end}}
