--- a/views/server/home.html
+++ b/views/server/home.html
@@ -1,3 +1,4 @@
+{{define "server/home"}}
 {{template "Tpl/header" .}}
 {{template "Tpl/headerSecond" .}}
 {{template "Tpl/sidebar" .}}
@@ -78,3 +79,4 @@
 
 </body>
 </html>
+{{end}}
