--- a/views/server/replication.html
+++ b/views/server/replication.html
@@ -1,20 +1,21 @@
+{{define "server/replication"}}
 {{template "Tpl/header" .}}
 {{template "Tpl/headerSecond" .}}
 {{template "Tpl/sidebar" .}}
 {{set . "active" "replication"}}
   <div class="admin-content">
   {{template "Tpl/navigation" .}}
-      
-        
+
+
       <div class="am-g am-g-fixed am-margin-top">
         <div class="am-panel am-panel-default">
         <div class="am-panel-hd am-cf me-panel-header" data-am-collapse="{target: '#replication-info'}">Replication Status (db.getReplicationInfo())<span class="am-icon-chevron-down am-fr" ></span></div>
           <div id="replication-info" class="am-in">
             <table class="am-table am-table-bd am-table-bdrs am-table-striped am-table-hover">
-           
+
               <tbody>
                 <tr>
-                  
+
                 </tr>
               </tbody>
             </table>
@@ -27,3 +28,4 @@
 
   </body>
   </html>
+{{end}}
