--- a/views/db/dbExport.html
+++ b/views/db/dbExport.html
@@ -1,4 +1,4 @@
-{{define "db/export" }}
+{{define "db/dbExport" }}
 {{template "Tpl/header" .}}
 {{template "Tpl/headerSecond" .}}
 {{template "Tpl/sidebar" .}}
