--- a/views/db/dbImport.html
+++ b/views/db/dbImport.html
@@ -1,4 +1,4 @@
-{{define "db/import"}}
+{{define "db/dbImport"}}
 {{template "Tpl/header" .}}
 {{template "Tpl/headerSecond" .}}
 {{template "Tpl/sidebar" .}}
