--- a/views/db/dbUsers.html
+++ b/views/db/dbUsers.html
@@ -1,4 +1,4 @@
-{{define "db/users"}}
+{{define "db/dbUsers"}}
 {{template "Tpl/header" .}}
 {{template "Tpl/headerSecond" .}}
 {{template "Tpl/sidebar" .}}
