--- a/views/db/dbTransfer.html
+++ b/views/db/dbTransfer.html
@@ -1,4 +1,4 @@
-{{define "db/transfer"}}
+{{define "db/dbTransfer"}}
 {{template "Tpl/header" .}}
 {{template "Tpl/headerSecond" .}}
 {{template "Tpl/sidebar" .}}
