fix: show databases indexes bug

--- a/views/server/databases.html
+++ b/views/server/databases.html
@@ -20,7 +20,7 @@
                 <th>Size</th>
                 <th>Storage Size</th>
                 <th>Data Size</th>
-                <th>Indexs</th>
+                <th>Indexes</th>
                 <th>Index Size</th>
                 <th>Collections </th>
                 <th>Objects</th>
@@ -32,7 +32,7 @@
                       <td>{{ $db.DiskSize | humanize }}</td>
                       <td>{{ $db.StorageSize | humanize  }}</td>
                       <td>{{ $db.DataSize | humanize }}</td>
-                      <td>{{ $db.Indexs }}</td>
+                      <td>{{ $db.Indexes }}</td>
                       <td>{{ $db.IndexSize | humanize }}</td>
                       <td>{{ $db.Collections }}</td>
                       <td>{{ $db.Objects }}</td>
